Fixed polygon function

--- a/examples/shapes.html
+++ b/examples/shapes.html
@@ -31,6 +31,8 @@
 
       pie(400, 200, 50, 0, 70).spin()
 
+      polygon(470, 200, 500, 190, 510, 230).spin()
+
     </script>
   </body>
 </html>
