Fixed obtuse pie shape

--- a/examples/shapes.html
+++ b/examples/shapes.html
@@ -31,7 +31,9 @@
 
       pie(400, 200, 50, 0, 70).spin()
 
-      polygon(470, 200, 500, 190, 510, 230).spin()
+      pie(500, 200, 50, 0, 300).spin()
+
+      polygon(570, 200, 600, 190, 610, 230).spin()
 
     </script>
   </body>
