--- a/examples/hand-tracker.html
+++ b/examples/hand-tracker.html
@@ -10,6 +10,9 @@
         import 'hand-tracker'
 
         HandTracker.start()
+
+        let ball = circle(500, 500, 100)
+        ball.anchored = false
         
     </script>
   </body>
