Fixed angle calculation and bounding polygon

--- a/examples/hand-tracker.html
+++ b/examples/hand-tracker.html
@@ -9,6 +9,8 @@
 
         import 'hand-tracker'
 
+        window.debug = true
+
         HandTracker.start()
 
         let ball = circle(500, 500, 100)
