--- a/examples/test.html
+++ b/examples/test.html
@@ -8,6 +8,7 @@
     <script type="kidjs">
 
         let ball = circle(400, 400, 300)
+        ball.color = 'blak'
 
         ball.fadeOut().fadeIn().fadeOut().wait()
         circle(100, 100, 400)
