--- a/examples/test.html
+++ b/examples/test.html
@@ -7,15 +7,7 @@
   <body>
     <script type="kidjs">
 
-        let a = square(100, 100, 100)
-        let b = square(150, 150, 100)
-        let g = group(a, b)
-        g.opacity = 0.5
-
-        let c = square(400, 100, 100)
-        let d = square(450, 150, 100)
-        c.opacity = 0.5
-        d.opacity = 0.5
+        on('keyup', beep())
 
     </script>
   </body>
